<resources>
    <string name="app_name">Happy New Year</string>
    <string name="dias_restantes_para_o_fim_de_ano">Dias restantes para o fim de ano:</string>
    <string name="voce_vai_participar">Você vai participar?</string>
    <string name="dias">dias</string>
    <string name="não_confirmado">Não confirmado</string>
    <string name="confirmar_presenca">Confirmar presença</string>
    <string name="sim">Sim, estarei lá</string>
    <string name="não">Não, não estarei lá</string>
    <string name="talvez">Talvez eu esteja lá</string>
    <string name="salvar">Salvar</string>
    <string name="alerta">Selecione uma opção para continuar!</string>
</resources>